--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
     "name": "frontend",
     "version": "1.0.0",
     "private": true,
+    "homepage": "https://b-red01.github.io/ai-news-summary",
     "dependencies": {
         "axios": "^1.6.2",
         "eslint": "^8.57.0",
